--- a/docker-compose-wiremock.yml
+++ b/docker-compose-wiremock.yml
@@ -1,8 +1,9 @@
 version: '3.9'
 services:
   wiremock:
-    container_name: wiremock
     image: wiremock/wiremock
+    container_name: wiremock
+    #restart: unless-stopped
     ports:
       - 9081:8080
     volumes:
