--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   postgresdb:
     image: postgres
-    restart: unless-stopped
+    #restart: unless-stopped
     container_name: postgresdb
     environment:
       POSTGRES_USER: ${POSTGRESQL_USER}
@@ -18,6 +18,7 @@ services:
   pgadmin:
     container_name: pgadmin4
     image: dpage/pgadmin4
+    #restart: unless-stopped
     environment:
       PGADMIN_DEFAULT_EMAIL: huynhquocbuu@gmail.com
       PGADMIN_DEFAULT_PASSWORD: ${DB_PASSWORD}
@@ -27,11 +28,10 @@ services:
       - 9082:80
     networks:
       - net-db
-    restart: unless-stopped
-
+      
   keycloak:
     image: jboss/keycloak
-    restart: unless-stopped
+    #restart: unless-stopped
     depends_on:
       - postgresdb
     container_name: jboss_keycloak
