--- a/docker-compose-rabbitmq.yml
+++ b/docker-compose-rabbitmq.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    restart: unless-stopped
+    #restart: unless-stopped
     container_name: rabbitmq
     ports:
         - 5672:5672
