--- a/docker-compose-elk.yml
+++ b/docker-compose-elk.yml
@@ -2,8 +2,8 @@ version: '3.9'
 services:
   elasticsearch:
     container_name: els
-    #image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0-arm64
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0-arm64
+    #image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
     ports:
       - 9200:9200
     volumes:
@@ -17,8 +17,8 @@ services:
       - net-elk
   kibana:
     container_name: kibana
-    #image: docker.elastic.co/kibana/kibana:8.7.0-arm64
-    image: docker.elastic.co/kibana/kibana:8.7.0
+    image: docker.elastic.co/kibana/kibana:8.7.0-arm64
+    #image: docker.elastic.co/kibana/kibana:8.7.0
     ports:
       - 5601:5601
     depends_on:
