--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -5,9 +5,9 @@ services:
     #restart: unless-stopped
     container_name: postgresdb
     environment:
-      POSTGRES_USER: ${POSTGRESQL_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      PGDATA: /var/lib/postgresql/data/pgdata
+      - POSTGRES_USER: ${POSTGRESQL_USER}
+      - POSTGRES_PASSWORD: ${DB_PASSWORD}
+      - PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - ./postgres-data/data:/var/lib/postgresql/data
     networks:
@@ -30,25 +30,26 @@ services:
       - net-db
       
   keycloak:
-    image: jboss/keycloak
+    image: bitnami/keycloak
     #restart: unless-stopped
     depends_on:
       - postgresdb
-    container_name: jboss_keycloak
+    container_name: bitnami_keycloak
     environment:
-      DB_VENDOR: postgres
-      DB_ADDR: postgresdb
-      DB_DATABASE: ${KEYCLOAK_DB}
-      DB_USER: ${POSTGRESQL_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      KEYCLOAK_USER: ${KEYCLOAK_USER}
-      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
+      #- KEYCLOAK_CREATE_ADMIN_USER=true
+      - KEYCLOAK_DATABASE_VENDOR: postgres
+      - KEYCLOAK_DATABASE_HOST: postgresdb
+      - KEYCLOAK_DATABASE_NAME: ${KEYCLOAK_DB}ß
+      - KEYCLOAK_DATABASE_USER: ${POSTGRESQL_USER}
+      - KEYCLOAK_DATABASE_PASSWORD: ${DB_PASSWORD}
+      - KEYCLOAK_ADMIN_USER: ${KEYCLOAK_USER}
+      - KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
     ports:
       - 9086:8080
-      - 8787:8787
+      #- 8787:8787
     volumes:
-        - ./keycloak/import:/temp
-        - ./keycloak/themes:/opt/jboss/keycloak/themes
+        #- ./keycloak/import:/temp
+        - ./keycloak/themes:/opt/bitnami/keycloak/themes
     networks:
       - net-db
 
