--- a/05-docker-compose-redis.yml
+++ b/05-docker-compose-redis.yml
@@ -5,11 +5,11 @@ services:
     container_name: redis
     #restart: unless-stopped
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
+      ALLOW_EMPTY_PASSWORD: yes
     volumes:
       - ./redis-data/data:/bitnami/redis/data
     ports:
-      - 7001:7000
+      - 7000:7000
     networks:
       - net-db
 
